--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -358,6 +358,8 @@
     </button>
   </div>
 
+  <app-preview *ngIf="preview"></app-preview>
+
   <!-- main -->
 
   <div class="card-container" *ngFor="let choice of choicies">
