--- a/src/app/preview/preview.component.css
+++ b/src/app/preview/preview.component.css
@@ -1,27 +1,37 @@
-.card {
-    all: unset;
-    border-radius: 4px;
-    border: 1px solid #eee;
-    background-color: #fafafa;
-    height: 40px;
-    width: 200px;
-    margin: 0 8px 16px;
-    padding: 16px;
+:host {     
+  width: 100%;     
+}
+
+  .blackboard {
+    width: 680px;
+    
+    margin: 7% auto;
+    border: tan solid 12px;
+    border-top: #bda27e solid 12px;
+    border-left: #b19876 solid 12px;
+    border-bottom: #c9ad86 solid 12px;
+    box-shadow: 0px 0px 6px 5px rgba(58, 18, 13, 0), 0px 0px 0px 2px #c2a782, 0px 0px 0px 4px #a58e6f, 3px 4px 8px 5px rgba(0, 0, 0, 0.5);
+    background-image: radial-gradient( circle at left 30%, rgba(34, 34, 34, 0.3), rgba(34, 34, 34, 0.3) 80px, rgba(34, 34, 34, 0.5) 100px, rgba(51, 51, 51, 0.5) 160px, rgba(51, 51, 51, 0.5)), linear-gradient( 215deg, transparent, transparent 100px, #222 260px, #222 320px, transparent), radial-gradient( circle at right, #111, rgba(51, 51, 51, 1));
+    background-color: #333;
+
+    color: rgba(238, 238, 238, 0.7);
+    font-family: 'Indie Flower', cursive;
+    font-size: 2.2em;
+}
+.blackboard p{
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .blackboard {
+    width: 90%;
     display: flex;
-    flex-direction: row;
-    justify-content: auto;
-    align-items: center;
-    transition: all 0.2s ease-in-out;
-    line-height: 24px;
   }
 
-  .card.highlight-card {
-    background-color: #1976d2;
-    color: white;
-    font-weight: 600;
-    border: none;
-    width: auto;
-    min-width: 30%;
-    position: relative;
-  }
+}
+
+
+
+
+
 
