--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -326,8 +326,8 @@
   </div>
 
   <h2>Unsere Tageskarte</h2>
-  <p>am  {{todayDate | date : 'yyyy-MM-dd'}}</p>
-  <p>morgen {{tomorrow}}</p>
+  <app-date-pipe></app-date-pipe>
+
 
  
 
