--- a/src/app/date-pipe/date-pipe.component.html
+++ b/src/app/date-pipe/date-pipe.component.html
@@ -1,4 +1,5 @@
-<p>am:</p>
-<h3>{{todayDate | date : 'dd-MM-yyyy'}}</h3>
-<p>morgen {{tomorrow}}</p>
-<p>morgen {{weekday}}</p>
+<h3>{{wochentag[weekday]}}, {{todayDate | date : 'dd-MM-yyyy'}}</h3>
+
+
+<!--p>morgen {{tomorrow}}</p-->
+
