--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,27 @@
-<div class="github-star-badge" (click) = "logIn()">
+<div
+*ngIf="!login"
+ class="github-star-badge" (click) = "logIn()"
+>
     <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
     Admin Login&nbsp;
 </div>
+
+<form *ngIf="login">
+
+    <div>
+      <label for="name">
+        Benutzer
+      </label>
+      <input id="name" type="text" formControlName="name">
+    </div>
+  
+    <div>
+      <label for="address">
+        Passwort
+      </label>
+      <input id="address" type="text" formControlName="address">
+    </div>
+  
+    <p (click) = "logInYes()" class="button" >Einloggen</p>
+  
+  </form>
