--- a/src/app/date-pipe/date-pipe.component.css
+++ b/src/app/date-pipe/date-pipe.component.css
@@ -1,8 +1,10 @@
-h3, p {
+:host {     
+    width: 100%;   
+    text-align: center;  
+  }
+  
+  h3{
     text-align: center;
     margin: 0;
-}
-
-span {
-    font-weight: normal;   
+    font-size: 75%;
 }
