--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,4 +1,6 @@
-    <div class="blackboard">
+
+<div class="menue blackboard">
+  <app-date-pipe></app-date-pipe>
         <div *ngFor="let daily of Dailies">
             <p>
               {{daily.menue}}<br>EUR {{daily.preis}}
@@ -11,5 +13,7 @@
             </p>
         </div>       
     </div>
+
+    
 
 
