--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,6 +1,6 @@
 
 <div class="menue blackboard">
-  <app-date-pipe></app-date-pipe>
+  <div><app-date-pipe></app-date-pipe></div>
         <div *ngFor="let daily of Dailies">
             <p>
               {{daily.menue}}<br>EUR {{daily.preis}}
