--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -51,3 +51,10 @@ svg#clouds {
   .toolbar svg{
     margin: 0 10px 0;
   }
+
+.hausschrift{
+  font-family: 'Lobster', cursive; font-size: 150%;
+}
+.hausschrift span{
+font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
