--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -259,17 +259,13 @@
 
   <app-preview *ngIf="preview" [Dailies]="choicies"></app-preview>
 
-  <img src="../assets/drachen.svg" 
+  <img src="./assets/drachen.svg" 
   alt=""
   *ngIf="!login"
   style="max-width: 680px; width: auto;"
   >
-  <div style="color:rgb(15, 15, 16); ">Preise gültig von Mo-Fr, 11:30 - 15:00</div>
-
-
+  <div style="color:rgb(15, 15, 16); ">Preise gültig Mo-Fr, 11:30 - 15:00</div>
     <h1 style="color: #17771f; margin-top: 40px;">Unserer Tägliches Menü</h1>
-
-  
 
   <!-- main -->
   <div *ngIf="login">
