--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -220,7 +220,7 @@
 
   <h3 class="hausschrift">Mai Garten<br><span>Ohlmüllerstraße 24</span></h3>
     <div class="spacer"></div>
-    <p style="text-align: right; margin-right: 10px;">Telefon<br>089 624 23 888</p>
+    <p style="text-align: right; margin-right: 10px;">Telefon:<br>089 624 23 888</p>
 </div>
 
   <!-- adresse 
