--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,18 +1,32 @@
 
-<div class="menue blackboard">
-  <div><app-date-pipe></app-date-pipe></div>
-        <div *ngFor="let daily of Dailies">
-            <p>
-              {{daily.menue}}<br>EUR {{daily.preis}}
-            </p>
-        </div>       
-
-        <div *ngIf="!Dailies?.length">
-            <p>
-              &nbsp;
-            </p>
-        </div>       
+    <div class="menue blackboard">
+      <div><app-date-pipe></app-date-pipe></div>
+      <div *ngFor="let daily of Dailies">
+          <p>
+            {{daily.menue}}<br>EUR {{daily.preis}}
+          </p>
+      </div>  
+      <div *ngIf="!Dailies?.length">
+          <p>
+            &nbsp;
+          </p>
+      </div>   
+      <div class="narrow"><<</div>
+      <div class="rarrow">>></div>
     </div>
+
+
+    <!--div style="float: right;">
+      >
+    </div-->
+
+
+
+
+
+
+
+
 
     
 
